<resources>
    <string name="app_name">AppExercise1202</string>

    <string name="action_get_status">Get Status</string>
    <string name="action_buy">BUY</string>
    <string name="action_activated">Activated</string>
    <string name="action_ok">OK</string>
    <string name="action_using_recycler_view">Intent to recycler view</string>

    <string name="msg_fetching_status">Fetching Status…</string>
    <string name="msg_fetching_pass">Fetching Pass…</string>
    <string name="msg_pass_activated">Pass Activated, expired at:\n%s</string>

    <string name="txt_day_pass">DAY PASS</string>
    <string name="txt_day_pass_1_title">1 DAY PASS</string>
    <string name="txt_day_pass_1_price">Rp 2.000</string>
    <string name="txt_day_pass_3_title">3 DAY PASS</string>
    <string name="txt_day_pass_3_price">Rp 5.000</string>
    <string name="txt_day_pass_7_title">7 DAY PASS</string>
    <string name="txt_day_pass_7_price">Rp 10.000</string>
    <string name="txt_day_pass_title">%d DAY PASS</string>

    <string name="txt_hour_pass">HOUR PASS</string>
    <string name="txt_hour_pass_1_title">1 HOUR PASS</string>
    <string name="txt_hour_pass_1_price">Rp 500</string>
    <string name="txt_hour_pass_8_title">8 HOUR PASS</string>
    <string name="txt_hour_pass_8_price">Rp 1.000</string>
    <string name="txt_hour_pass_title">%d HOUR PASS</string>
</resources>